// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.service";
option java_outer_classname = "MyProto";
option objc_class_prefix = "HLW";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}
// Get user profile service
service GetProfile {
    rpc GetUserProfile (UserProfileRequest) returns (UserProfileReply) {}
    rpc GetMovieProfile (MovieProfileRequest) returns (MovieProfileReply) {}
    rpc GetRecommend (UserRecommendRequest) returns (UserRecommendReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

//The request message containing the user's id.
message UserProfileRequest {
    string id = 1;
}
//The reply message containing the user's id, movie's id, ratings and timestamp.
message UserProfileReply {
    string uid = 1;
    message Rating {
        string mid = 1;
        float rating = 2;
        string timestamp = 3;
    }
    repeated Rating rating = 2;
}

//The request message containing the user's id.
message UserRecommendRequest {
    string id = 1;
}

message UserRecommendReply {
    repeated string mid = 1;
}

//The request message containing the movie's id.
message MovieProfileRequest {
    string id = 1;
}

//The reply message containing the movie's id, title, genre.
message MovieProfileReply {
    string mid = 1;
    string title = 2;
    string genre = 3;
}

